bad/void_return_in_func_returning_class.example_compiler_output
ERROR
[1mbad/void_return_in_func_returning_class.lat:4:12: [1;31merror: [0;1mnon-void function should return a value[m
Y test() { return; }
           [1;32m^[m
[1mbad/void_return_in_func_returning_class.lat:4:1: [1;34mnote: [0;1mfunction return type is declared here[m
Y test() { return; }
[1;32m^[m
